--- a/app/src/features/game/components/button/button.module.css
+++ b/app/src/features/game/components/button/button.module.css
@@ -1,7 +1,4 @@
 .main_container {
-  margin-top: 15px;
-  font-size: 1.2rem;
-  background-color: rgb(30, 163, 163);
-  /* display: flex;
-  flex-shrink: 1; */
+  cursor: pointer;
+  font-size: 2.5rem;
 }
