--- a/app/src/features/game/components/counter/counter.module.css
+++ b/app/src/features/game/components/counter/counter.module.css
@@ -1,8 +1,12 @@
 .main_container {
-  border: 1px solid white;
+  background-color: #3f4747;
+  padding: 0 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .text {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
 }
