--- a/app/src/features/game/index.module.css
+++ b/app/src/features/game/index.module.css
@@ -1,4 +1,7 @@
 .main_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  border: 8px solid #3f4747;
+  padding: 8px;
 }
